# starception

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.rst  LICENSE  README.md  pyproject.toml
.github/workflows/: lint.yml  lint_and_test.yml  publish.yml  qa.yml
.run/: uvicorn.run.xml
examples/: app.py  fastapi.py  fastapi_.py  starlette.py
examples/templates/: csstest.css  index.html  jstest.js
starception/: __init__.py  exception_handler.py  middleware.py
starception/templates/: code_dark.css  code_light.css  code_snippet.html  dark.css  frame_line.html  index.html  lib.html  scripts.js  styles.css
starception/templates/custom_exceptions/: not_found.html
tests/: test_middleware.py  test_starception.py  test_stub.py
