[project]
name = "starception"
version = "1.2.1"
description = "Beautiful debugging page for Starlette and FastAPI apps."
authors = [{ name = "Alex Oleshkevich", email = "alex.oleshkevich@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
keywords = ["starlette", "fastapi", "debug", "exception", "error-page", "asgi", "middleware", "debugging"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Middleware",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "MarkupSafe>=2",
    "Jinja2>=3",
]

[project.optional-dependencies]
highlight = ["pygments>=2.13"]

[project.urls]
Homepage = "https://github.com/alex-oleshkevich/starception"
Repository = "https://github.com/alex-oleshkevich/starception"
Documentation = "https://github.com/alex-oleshkevich/starception"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "starception"
module-root = ""

[dependency-groups]
dev = [
    "starlette",
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "mypy>=1.14",
    "uvicorn>=0.34",
    "fastapi>=0.120",
    "httpx>=0.28",
    "pygments>=2.13",
]

[tool.coverage.run]
branch = true
source = ["starception"]
omit = ["tests/*", ".venv/*", ".git/*", "*/__main__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError"
]

[tool.mypy]
disallow_untyped_defs = true
ignore_missing_imports = true
strict = true
pretty = true
show_error_codes = true
files = ["starception", "examples", "tests"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
norecursedirs = [
    "node_modules", "frontend", "storage", "dist", ".git",
    "*/migrations/*", "*/static/*", "docs", ".venv"
]
addopts = "--tb=short -s --no-cov-on-fail"
testpaths = ["tests"]

[tool.ruff]
exclude = [
    ".egg",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".tox",
    ".venv",
]
line-length = 120
indent-width = 4

[tool.ruff.lint]
fixable = ["ALL"]

[tool.ruff.format]
skip-magic-trailing-comma = false
